metrics/prometheus-kubeDnsPrometheusDiscoveryService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kube-dns
  name: kube-dns-prometheus-discovery
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: http-metrics-skydns
    port: 10055
    targetPort: 10055
  - name: http-metrics-dnsmasq
    port: 10054
    targetPort: 10054
  selector:
    k8s-app: kube-dns
